Fix error instance overflow (#6841)
## Summary
When the error instance event is over a certain amount of lines, it
overflows into the other content. Allow the container to grow and scroll
when necessary.


https://www.loom.com/share/aa4c61e67d52492cb8b40d354ca34896?sid=91820b21-6462-4fc8-a414-5a179953aba5

## How did you test this change?
1) Fix the error event to a long excerpt of text
2) View the error instance on the error show page
- [ ] Clicking see more shows the entire error event with no overflow
3) View a session with an error, and click to display an error in the
right panel
- [ ] Clicking see more shows the entire error event with no overflow

## Are there any deployment considerations?
N/A

## Does this work require review from our design team?
N/A

--- a/frontend/src/__generated/index.css
+++ b/frontend/src/__generated/index.css
@@ -6067,9 +6067,6 @@ body {
 ._1068vpp6 {
   animation: 1s _1068vpp5 linear infinite;
 }
-._33eaux0 {
-  max-height: 16em;
-}
 ._2tuxi80 {
   background: linear-gradient(45deg, rgba(162, 138, 220, 0.08) 0%, rgba(216, 165, 216, 0.08) 50%, rgba(233, 192, 186, 0.08) 100%);
 }
@@ -6668,18 +6665,22 @@ body {
   max-height: calc(100vh - 160px - 32px - 42px - 32px - var(--header-height) - var(--banner-height));
 }
 .ltrwrc0 {
-  height: calc(100vh - 108px - var(--banner-height));
+  height: calc(100vh - 108px);
+  overflow-y: scroll;
 }
 .ltrwrc1 {
+  height: calc(100vh - 108px - var(--banner-height));
+}
+.ltrwrc2 {
   position: fixed;
   left: 100%;
   transform: translateX(300px);
 }
-.ltrwrc2 {
+.ltrwrc3 {
   height: 100%;
   padding: 0;
 }
-.ltrwrc3 {
+.ltrwrc4 {
   border-radius: 8px;
 }
 ._1l6nlco0 {
